flexbox on project overview to prevent board from overflowing

--- a/packages/app/styles/globals.less
+++ b/packages/app/styles/globals.less
@@ -169,6 +169,10 @@ textarea {
           flex-direction: column;
           min-height: 0;
           max-height: 100%;
+
+          & > .ant-card-head {
+            flex-shrink: 0;
+          }
         }
       }
     }
